Group by host in restic role scripts (as we're using host as backup set name)

--- a/roles/restic/templates/restic-remote-sync.sh.j2
+++ b/roles/restic/templates/restic-remote-sync.sh.j2
@@ -23,6 +23,7 @@ restic forget \
 	--keep-weekly   8    \
 	--keep-monthly  12   \
 	--keep-tag MANUAL    \
+	--group-by host
 
 restic prune
 {% endif %}
