--- a/roles/snmpd/templates/snmpd.conf.j2
+++ b/roles/snmpd/templates/snmpd.conf.j2
@@ -32,9 +32,11 @@ view systemonly included .1.3.6.1.4.1.2021.13.16
 # APT
 {% if ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' %}
 extend apt /usr/local/sbin/snmp-get-apt-updates.sh
+extend systemd /bin/systemctl is-system-running
 {% endif %}
 {% if ansible_distribution == 'CentOS' %}
 extend dnf /usr/local/sbin/snmp-get-dnf-updates.sh
+extend systemd /bin/systemctl is-system-running
 {% endif %}
 view systemonly included .1
 
