--- a/roles/restic/templates/restic-check-and-prune.sh.j2
+++ b/roles/restic/templates/restic-check-and-prune.sh.j2
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-set -eo pipefail
+set -euo pipefail
 
 export PATH="$PATH:/usr/bin/:/usr/local/bin/"
 export RESTIC_REPOSITORY='{{ restic_agent_repository }}'
