--- a/roles/restic/templates/restic-agent-services-test.sh.j2
+++ b/roles/restic/templates/restic-agent-services-test.sh.j2
@@ -156,6 +156,7 @@ elif [ $BORG_LOGGING = "--verbose" ]; then
 fi
 {% endif %}
 
+{% if restic_cleanup %}
 {# Mark old backups for GC #}
 restic forget \
     --host="{{ service.name }}" \
@@ -164,3 +165,4 @@ restic forget \
 	--keep-monthly  6   \
 	--keep-tag MANUAL   \
 	--group-by host
+{% endif %}
